--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
         <h2>Subhash Mattikalli</h2>
         <p>Department Head - Machine Maintenace</p>
         <div class="contact-info">
-            <p><i class="fas fa-envelope"></i> Email: machines.support@printography.com</p>
-            <p><i class="fas fa-phone"></i> Phone: +91 91529 12101</p>
+            <p><i class="fas fa-envelope"></i>machines.support@printography.com</p>
+            <p><i class="fas fa-phone"></i>+91 91529 12101</p>
         </div>
         <a href="contact.vcf" class="btn" download>Download vCard</a>
         <a href="https://www.Printography.com" class="btn">Know More</a>
